# tracklib

./: .gitignore  Cargo.toml  LICENSE-MIT  default.nix
java_tracklib/: .gitignore  default.nix
java_tracklib/java/: pom.xml
java_tracklib/java/src/main/java/com/ridewithgps/tracklib/: DataField.java  ParseException.java  RWTF.java
java_tracklib/rust/: Cargo.toml
java_tracklib/rust/src/: error.rs  lib.rs
ruby_tracklib/: .gitignore  Cargo.toml  Gemfile  Rakefile  default.nix  irbrc.rb  ruby_tracklib.gemspec  tracklib-0.1.1.gem  tracklib.gemspec
ruby_tracklib/ext/: Rakefile
ruby_tracklib/lib/: ruby_tracklib.rb  tracklib.rb
ruby_tracklib/lib/ruby_tracklib/: version.rb
ruby_tracklib/lib/tracklib/: version.rb
ruby_tracklib/spec/: basic_spec.rb  roundtrip_spec.rb  writer_spec.rb
ruby_tracklib/src/: lib.rs  polyline.rs  read.rs  rwtfile.rs  schema.rs  surface.rs  write.rs
ruby_tracklib/test/: test_helper.rb
ruby_tracklib2/: .gitignore  Cargo.toml  tracklib.gemspec  tracklib_next.gemspec
ruby_tracklib2/lib/: tracklib.rb  tracklib_next.rb
ruby_tracklib2/lib/tracklib/: version.rb
ruby_tracklib2/lib/tracklib_next/: version.rb
ruby_tracklib2/spec/: reader_spec.rb  roundtrip_spec.rb  spec_helper.rb  writer_spec.rb
ruby_tracklib2/src/: lib.rs  read.rs  schema.rs  track_reader.rs  write.rs
rwtfinspect/: Cargo.toml
rwtfinspect/src/: main.rs
tracklib/: Cargo.toml
tracklib/benches/: read.rs
tracklib/src/: error.rs  flagscolumn.rs  lib.rs  metadata.rs  polyline.rs  rwtfile.rs  section.rs  simplification.rs  simplify.rs  surface.rs  types.rs  utils.rs
tracklib/src/decode/: crc.rs  mod.rs  varint.rs
tracklib/src/read/: bitstream.rs  header.rs  inspect.rs  metadata.rs  presence_column.rs  schema.rs
tracklib/src/read/section/: mod.rs  reader.rs
tracklib/src/write/: bitstream.rs  encoders.rs  header.rs  mod.rs  track.rs  util.rs
tracklib/src/write/section/: encrypted.rs  standard.rs
tracklib/tests/: roundtrip.rs
tracklib2/: Cargo.toml
tracklib2/benches/: read.rs
tracklib2/src/: consts.rs  error.rs  lib.rs  schema.rs  types.rs  util.rs
tracklib2/src/read/: bitstream.rs  crc.rs  data_table.rs  decoders.rs  header.rs  inspect.rs  metadata.rs  mod.rs  presence_column.rs  schema.rs  section.rs  section_reader.rs  track.rs  types_table.rs
tracklib2/src/read/section/: encrypted.rs  mod.rs  reader.rs  standard.rs
tracklib2/src/write/: bitstream.rs  crcwriter.rs  data_table.rs  encoders.rs  header.rs  metadata.rs  mod.rs  section.rs  track.rs  types.rs
tracklib2/src/write/section/: encrypted.rs  mod.rs  writer.rs
tracklib2/tests/: roundtrip.rs
