[package]
name = "ruby_tracklib"
version = "0.1.0"
authors = ["Dan Larkin <dan@danlarkin.org>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[profile.release]
lto = false # LTO broke the ruby module in my testing

[lib]
name = "track"
crate-type = ["cdylib"]

[dependencies]
tracklib = "*"
rutie = "0.5"
rutie-serde = "0.1"
lazy_static = "1.3"
base64 = "0.10"
