[package]
name = "ruby_tracklib"
version = "0.1.0"
authors = ["Dan Larkin <dan@danlarkin.org>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[lib]
name = "tracklib"
crate-type = ["cdylib"]

[dependencies]
tracklib = "0.3.0"
rutie = {git="https://github.com/danlarkin/rutie", features=["no-link"]}
rutie-serde = {git="https://github.com/danlarkin/rutie-serde"}
lazy_static = "1.3"
base64 = "0.10"
