[package]
name = "tracklib2"
version = "0.1.0"
authors = ["Dan Larkin <dan@danlarkin.org>"]
edition = "2021"

[dependencies]
chrono = {version = "0.4", optional = true}
crc = "2.1"
humansize = {version = "1.1", optional = true}
leb128 = "0.2"
nom = {version = "7.1", default_features = false, features = []}
nom-leb128 = "0.2"
orion = "0.17"
term-table = {version = "1.3", optional = true}
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5"
chacha20poly1305 = {version = "0.9", features = ["std"]}
criterion = "0.3"
float-cmp = "0.9"

[features]
default = []
inspect = ["chrono", "humansize", "term-table"]

[[bench]]
name = "read"
harness = false
